Fixed a few more layout issues, changed some of the icons and content to be more clear

--- a/css/case-study.css
+++ b/css/case-study.css
@@ -111,7 +111,7 @@ main > article > section ul[role="list"] li {
 }
 
 main > article > section ul[role="list"] li::before {
-    content: "▸" / "";
+    content: "•" / "";
     color: var(--color-primary);
     position: absolute;
     left: calc(-1 * var(--space-md));
